--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,9 +3,24 @@ h1{
   font-weight: normal;
   font-size: 50px;
   color:white;
-  align-content: center;
+  text-align: center;
 }
 h3{
   color:aquamarine;
   font-size: 16px;
+}
+body{
+  background-color: black;
+  text-align: center;
+}
+h2{
+  font-family: verdana;
+  font-weight: 300;
+  font-size: 42px;
+  color:white;
+}
+p{
+  font-family: verdana;
+  font-size: 21px;
+  color:grey;
 }
